--- a/.github/workflows/android-compat.yaml
+++ b/.github/workflows/android-compat.yaml
@@ -1,9 +1,9 @@
 name: android build
 run-name: android build
 on:
-  push:
-    tags:
-      - '*'
+  pull_request:
+    types: [opened, reopened, synchronize]
+
 jobs:
   android_build:
     runs-on: androidndk-r26b
@@ -16,17 +16,3 @@ jobs:
         run: |
           cd ${{ github.workspace }}
           NDK_HOME=/opt/android/android-ndk-r26b/toolchains/llvm/prebuilt/linux-x86_64/bin make c_api_android
-      - name: generate checksums and xz -e
-        run: |
-          cd ${{ github.workspace }}
-          cd build
-          for i in *.so;
-          do
-            sha256sum $i > $i.sha256
-            xz -e $i
-            sha256sum $i.xz > $i.xz.sha256
-          done
-          for i in *.h;
-          do
-            xz -e $i
-          done
