publish releases on ly when required.. why is CI that way

--- a/.github/workflows/windows-tagged.yaml
+++ b/.github/workflows/windows-tagged.yaml
@@ -1,8 +1,9 @@
 name: windows build
 run-name: windows build
 on:
-  pull_request:
-    types: [opened, reopened, synchronize]
+  push:
+    tags:
+      - '*'
 
 jobs:
   windows_build:
