run checks also on every commit

--- a/.github/workflows/linux-compat.yaml
+++ b/.github/workflows/linux-compat.yaml
@@ -1,6 +1,9 @@
 name: linux build
 run-name: linux build
 on:
+  push:
+    branches:
+      - '!renovate/**'
   pull_request:
     types: [opened, reopened, synchronize]
 
